index.css
/* ... */
.comment-container textarea {
  width: calc(100% - 5rem);
  height: 21.4rem;
  background-color: transparent;
  outline: none;
  border: none;
  padding: 2rem;
}

.btn-primary-1__contact {
  width: 19rem;
}

.sponsors-section {
  padding: 6rem 4rem;
  text-align: center;
}

.sponsors-text-container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 6rem;
}

.sponsors-text-container h3 {
  color: var(--color-text-gray);
}

.sponsors-text-container h2 {
  font-size: 2.8rem;
}

.sponsors-text-container h3 span {
  text-decoration: underline;
  text-decoration-color: var(--color-red);
  text-decoration-thickness: 2px;
  text-underline-offset: 0.5rem;
}

.sponsers-logo-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  flex-flow: wrap;
}

.sponsers-logo-container img {
  width: 20%;
  height: auto;
}

footer {
  background-color: var(--color-blue-black);
  color: var(--color-white);
}

.footer-wrapper-1 {
  display: flex;
  gap: 8rem;
  padding: 6rem 8rem;
}
.footer-wrapper-1-left {
  flex: 0.5;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  font-size: 1.4rem;
}

.footer-wrapper-1-left img {
  width: 13rem;
  height: auto;
}

.footer-wrapper-1-left .icons-container {
  display: flex;
  gap: 2rem;
}

.footer-wrapper-1-left .icons-container img {
  width: 3rem;
  height: 3rem;
  background-color: var(--color-white);
  border-radius: 100%;
  padding: 0.5rem;
  cursor: pointer;
  transition: all 0.35s;
}

.footer-wrapper-1-left .icons-container img:hover {
  transform: scale(1.35);
}

.footer-wrapper-1-right {
  flex: 1;
  display: flex;
  justify-content: space-around;
  flex-flow: wrap;
}

.footer-links-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.footer-links-container h2 span {
  text-decoration: underline;
  text-decoration-color: var(--color-red);
  text-decoration-thickness: 2px;
  text-underline-offset: 0.5rem;
}

.footer-links-container h2 {
  font-size: 2rem;
  font-weight: 400;
}

.footer-links-container ul {
  text-decoration: none;
  outline: none;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-size: 1.4rem;
}

.footer-links-container ul li a {
  text-decoration: none;
  color: var(--color-white);
}

#contact-list-container li {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
}

#contact-list-container li img {
  width: 2rem;
  height: 2rem;
}

#contact-list-container li span {
  font-size: 1.4rem;
}

.footer-wrapper-2 {
  height: 7.3rem;
  width: 100%;
  text-align: center;
  border-top: 1px solid var(--color-gray);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
}

.menu {
  display: none;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  justify-self: center;
  align-self: center;
}

.menu img {
  height: 100%;
  width: 100%;
}

/* @media (max-width: 480px) {
  .card-section .card {
    width: 80%;
  }
}

@media (max-width: 768px) {
  .card-section .card {
    width: 40%;
  }
} */

.hidden {
  display: none;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
}

.btn-close {
  position: absolute;
  top: 12%;
  right: 5%;
  width: 4rem;
  height: 4rem;
  cursor: pointer;
}

.overlay ul {
  list-style: none;
  position: absolute;
  top: 20%;
  left: 2rem;
  color: #000;
  width: 90%;
  background-color: var(--color-white);
  padding: 1rem;
}

.overlay ul li {
  padding: 1.5rem;
}

.overlay ul li:not(:last-child) {
  border-bottom: 2px solid var(--color-text-gray);
}

.overlay ul li a {
  text-decoration: none;
  color: inherit;
  font-size: 2.8rem;
}

@media only screen and (max-width: 1000px) {
  .card-section .card {
    width: 40%;
  }
  .about-section {
    flex-direction: column;
  }
  .about-img-container {
    flex: 1;
  }
  .about-content {
    flex: 1;
  }
  .video-section {
    flex-direction: column;
    gap: 5rem;
  }

  .text-content {
    height: auto;
    position: initial;
  }

  .contact-section {
    padding: 4rem 2rem;
  }

  .contact-main-container {
    flex-direction: column;
  }

  .contact-text-container {
    flex: 1;
  }

  .contact-form-container form .input-group {
    justify-content: space-around;
    gap: 2rem;
  }

  .contact-info {
    flex-direction: column;
    gap: 2rem;
  }
  .hero-section {
    min-height: auto;
  }
}

@media only screen and (max-width: 767px) {
  .card-section .card {
    width: 80%;
  }

  .contact-nav {
    flex-direction: column;
  }

  .social-div {
    gap: 4rem;
  }

  .social-div button {
    height: 3.8rem;
  }

  .contact-div {
    gap: 2rem;
    padding: 1rem;
  }

  nav {
    padding: 0 2rem;
  }

  .contact-div {
    justify-content: space-around;
  }

  nav ul {
    display: none;
  }

  .menu {
    display: block;
  }

  .contact-form-container {
    width: 100%;
  }

  .contact-form-container form {
    width: 100%;
  }

  .contact-form-container form .input-group {
    flex-direction: column;
    width: 100%;
  }

  .contact-form-container form .input-group div {
    width: 100%;
  }
  .sponsers-logo-container {
    gap: 2rem;
  }
  .sponsers-logo-container img {
    width: 40%;
  }

  .footer-wrapper-1 {
    flex-direction: column;
    padding: 4rem 2rem;
  }

  .footer-wrapper-1-right {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 2rem;
  }

  .footer-links-container {
    justify-content: flex-start;
    align-items: flex-start;
  }

  .main-para-1 {
    width: auto;
  }
  .main-heading-1 {
    width: auto;
  }
}

